--- a/pipeline/helm-char/overrides/qaf/fozzie30.yaml
+++ b/pipeline/helm-char/overrides/qaf/fozzie30.yaml
@@ -3,4 +3,4 @@ ingress:
   host: dogfood-fozzie30
 
 restMeetingService:
-  serviceUrl: "https://rms-fozzie30.bb2qa.local/huffy20.Diligent.Boardbooks.4.0.0.RestMeetingService/RestMeetingService.svc/"
+  serviceUrl: "https://rms-fozzie30.bb2qa.local/huffy20"
